--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,20 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/txt_doc_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Document Type" />
+
+    <Spinner
+        android:id="@+id/doc_type"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:entries="@array/docTypes"/>
+
+    <TextView
         android:id="@+id/txt_case_ref"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -66,14 +80,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
-         android:text="Submit"/>
+        android:text="Submit"/>
 
     <ImageView
         android:id="@+id/img_preview"
         android:layout_gravity="center_horizontal"
         android:background="@android:color/darker_gray"
         android:layout_width="fill_parent"
-        android:layout_height="400px" />
+        android:layout_height="300dp" />
 
 </LinearLayout>
 
